# DM_Unfolding

./: .gitignore  CMakeLists.txt  Makefile  README.md  Unfold  collectNormFactors.py  fakeStudy.py  interpolateSignals.py  muRmuFWeights.json  muRmuFnormalization.py  processAllSignals.py  processSignalSamples.C  shifts.py  submit.py
.gitignore/: .gitignore
Config/: DMConfig.ini
interface/: BinFinder.hpp  FileWriter.hpp  HistDrawer.hpp  HistHelper.hpp  HistMaker.hpp  LinkDef.h  PathHelper.hpp  Sample.hpp  UnfoldWrapper.hpp  Unfolder.hpp
pdfs/: .gitignoe
src/: BinFinder.cpp  FileWriter.cpp  HistDrawer.cpp  HistHelper.cpp  HistMaker.cpp  MCSelector.C  MCSelector.cpp  MCSelector.h  MCSelector.hpp  PathHelper.cpp  UnfoldWrapper.cpp  Unfolder.cpp  files.json  histoHelper.py  histoMaker.py  main.cpp  sample.py  unfolder.py  variableContainer.py  variables.json
